added form code in html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     </header>
       <aside>
         <h2>Choose Your Name</h2>
-        
+        <form>
+            <div>
+                <label for="playername">Plaer Name</label>
+                <input type="text" name="username" id="playername"/>
+            </div>
+            <div>
+                <button type="button">Cancel</button>
+                <button type="submit"> Confirm</button>
+            </div>
+        </form>
       </aside>
         <main>
             <section id="game-configuration">
