--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"/>
+      <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
