--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
       <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
+    <header id="main-header">
         <h1>Play Tic Tac Toe</h1>
         <p>Built with HTML , CSS , JavaScript and -of course - lots Of Love!</p>
     </header>
       <aside>
+        
         <h2>Choose Your Name</h2>
         <form>
             <div>
