added classes to button

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <input type="text" name="username" id="playername"/>
             </div>
             <div>
-                <button type="button">Cancel</button>
-                <button type="submit"> Confirm</button>
+                <button type="button" class="btn btn-alt">Cancel</button>
+                <button type="submit" class="btn"> Confirm</button>
             </div>
         </form>
       </aside>
@@ -37,7 +37,7 @@
                     <h2>Player 1 </h2>
                     <h3>Player Name</h3>
                     <p>X</p>
-                    <button>Edit</button>
+                    <button class="btn btn-alt">Edit</button>
                 </article>
                 </li>
                 <li>
@@ -45,10 +45,10 @@
                         <h2>Player 2 </h2>
                         <h3>Player Name</h3>
                         <p>O</p>
-                        <button>Edit</button>
+                        <button class="btn btn-alt">Edit</button>
                 </li>
              </ol>
-             <button> Start New Game</button>
+             <button class="btn"> Start New Game</button>
             </section>
             <section id="active-game">
                 <article>
