overlays.css file added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1>Play Tic Tac Toe</h1>
         <p>Built with HTML , CSS , JavaScript and -of course - lots Of Love!</p>
     </header>
-      <aside>
-        
+    <main>
+      <aside class="modal" >
         <h2>Choose Your Name</h2>
         <form>
             <div>
@@ -29,7 +29,7 @@
             </div>
         </form>
       </aside>
-        <main>
+        
             <section id="game-configuration">
              <ol>
                 <li> 
