--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="styles/overlays.css">
 </head>
 <body>
+    <div id="backdrop"></div>
     <header id="main-header">
         <h1>Play Tic Tac Toe</h1>
         <p>Built with HTML , CSS , JavaScript and -of course - lots Of Love!</p>
