configuration.css file added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"/>
       <link rel="stylesheet" href="styles/styles.css">
       <link rel="stylesheet" href="styles/overlays.css">
+      <link rel="stylesheet" href="styles/configuration.css">
 </head>
 <body>
     <div id="backdrop"></div>
@@ -18,7 +19,7 @@
         <p>Built with HTML , CSS , JavaScript and -of course - lots Of Love!</p>
     </header>
     <main>
-      <aside class="modal" >
+      <aside class="modal" id="config-overlay">
         <h2>Choose Your Name</h2>
         <form>
             <div>
