--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <aside class="modal" id="config-overlay">
         <h2>Choose Your Name</h2>
         <form>
-            <div>
+            <div class="form-control">
                 <label for="playername">Plaer Name</label>
                 <input type="text" name="username" id="playername"/>
             </div>
