--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <article>
                     <h2>Player 1 </h2>
                     <h3>Player Name</h3>
-                    <p>X</p>
+                    <p class="player-symbol">X</p>
                     <button class="btn btn-alt">Edit</button>
                 </article>
                 </li>
@@ -47,7 +47,7 @@
                     <article>
                         <h2>Player 2 </h2>
                         <h3>Player Name</h3>
-                        <p>O</p>
+                        <p class="player-symbol">O</p>
                         <button class="btn btn-alt">Edit</button>
                 </li>
              </ol>
