new styles added to game.css

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
              <button class="btn"> Start New Game</button>
             </section>
             <section id="active-game">
-                <article>
-                    <h3>You Won, <span id="winner-name">Player Name</span></h3>
+                <article id="game-over">
+                    <h2>You Won, <span id="winner-name">Player Name</span></h2>
                     <p>Click "Start New Game" above, to start a new game!</p>
                 </article>
                 <p>It's Your Turn <span id="active-player-name">Player Name</span>!</p>
-                <ol>
+                <ol id="game-board">
                     <li></li>
                     <li></li>
                     <li></li>
