--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <link rel="stylesheet" href="styles/overlays.css">
       <link rel="stylesheet" href="styles/configuration.css">
       <link rel="stylesheet" href="styles/game.css">
+      <script src="scripts/config.js" defer></script>
+      <script src="scripts/game.js" defer></script>
+      <script src="scripts/app.js" defer></script>
 </head>
 <body>
     <div id="backdrop"></div>
@@ -28,7 +31,7 @@
                 <input type="text" name="username" id="playername"/>
             </div>
             <div>
-                <button type="button" class="btn btn-alt">Cancel</button>
+                <button type="button" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
                 <button type="submit" class="btn"> Confirm</button>
             </div>
         </form>
